[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/UI/HealthBar/progress.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/HealthBar/under.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/HealthBar/over.png" type="Texture" id=3]
[ext_resource path="res://entities/Player/HUD.gd" type="Script" id=4]
[ext_resource path="res://assets/UI/HUD/coin.hud.png" type="Texture" id=5]
[ext_resource path="res://assets/Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/UI/HUD/life-frame.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 6 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="HealthBar" type="TextureProgress" parent="."]
visible = false
margin_left = 22.0
margin_top = 15.0
margin_right = 86.0
margin_bottom = 47.0
rect_min_size = Vector2( 64, 32 )
rect_scale = Vector2( 3, 3 )
rect_clip_content = true
value = 100.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -170.0
margin_top = -60.0
margin_right = -30.0
margin_bottom = -20.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinIcon" type="TextureRect" parent="Coins"]
margin_left = 15.0
margin_right = 40.0
margin_bottom = 40.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 25, 40 )
texture = ExtResource( 5 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinLabel" type="Label" parent="Coins"]
margin_left = 60.0
margin_top = 4.0
margin_right = 124.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "%d"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lifes" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -304.0
margin_top = -60.0
margin_right = -180.0
margin_bottom = -20.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeIcon" type="TextureRect" parent="Lifes"]
margin_left = 5.0
margin_right = 45.0
margin_bottom = 40.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 7 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeLabel" type="Label" parent="Lifes"]
margin_left = 55.0
margin_top = 4.0
margin_right = 119.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "%d"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
